--- a/index.html
+++ b/index.html
@@ -1,138 +1,168 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.7.0/dist/tf.min.js"></script>
-        <script>
-            let valueChanged = false;
-            async function main() {
-                const video = document.querySelector('video');
-                const canvas = document.querySelector('canvas');
-                const select = document.querySelector('select');
-                let previousValue = select.value;
-                let currentValue = null;
 
-                video.width = 640;
-                video.height = 480;
-                const webcam = await tf.data.webcam(video);
-                const model = await tf.loadGraphModel('model/model.json');
-                let [r1i, r2i, r3i, r4i] = [tf.tensor(0.), tf.tensor(0.), tf.tensor(0.), tf.tensor(0.)];
-                const downsample_ratio = tf.tensor(0.5);
+<head>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.7.0/dist/tf.min.js"></script>
+    <script>
+        let valueChanged = false;
 
-                // Background options configuration
-                const backgroundOptions = {
-                    'white': { fgr: true, pha: true, background: 'rgb(255, 255, 255)' },
-                    'green': { fgr: true, pha: true, background: 'rgb(120, 255, 155)' },
-                    'alpha': { fgr: false, pha: true, background: 'rgb(0, 0, 0)' },
-                    'foreground': { fgr: true, pha: false, background: null },
-                    'image': { fgr: true, pha: true, background: 'url(images/image2.png) center center / cover' },
-                    'image3': { fgr: true, pha: true, background: 'url(images/image3.png) center center / cover' },
-                    'image4': { fgr: true, pha: true, background: 'url(images/image4.jpg) center center / cover' },
-                    'image5': { fgr: true, pha: true, background: 'url(images/image5.avif) center center / cover' },
-                    'image6': { fgr: true, pha: true, background: 'url(images/image6.jpg) center center / cover' },
-                    'image8': { fgr: true, pha: true, background: 'url(images/image8.avif) center center / cover' }
-                };
+        async function main() {
+            const video = document.querySelector('video');
+            const canvas = document.querySelector('canvas');
+            const select = document.querySelector('select');
+            let previousValue = select.value;
 
-                // Loop to add background to each frame
-                while (true) {
-                    await tf.nextFrame();
-                    const img = await webcam.capture();
-                    const src = tf.tidy(() => img.expandDims(0).div(255));
-                    const [fgr, pha, r1o, r2o, r3o, r4o] = await model.executeAsync(
-                        {src, r1i, r2i, r3i, r4i, downsample_ratio},
-                        ['fgr', 'pha', 'r1o', 'r2o', 'r3o', 'r4o']
-                    );
+            video.width = 640;
+            video.height = 480;
 
-                    const viewOption = select.value;
-                    if (viewOption !== previousValue) {
-                        valueChanged = true;
-                        previousValue = viewOption;
-                    } else {
-                        valueChanged = false;
-                    }
-                    
-                    if (valueChanged && viewOption.includes('image')) {
-                        /*
-                        This is a hack to force tensorflow to re-render the background when switching from color to image.
-                        It is necessary because tensorflow was not rendering the background when switching from color to image.
-                        */
+            const webcam = await tf.data.webcam(video);
+            const model = await tf.loadGraphModel('model/model.json');
+
+            let [r1i, r2i, r3i, r4i] = [tf.tensor(0.), tf.tensor(0.), tf.tensor(0.), tf.tensor(0.)];
+            const downsample_ratio = tf.tensor(0.5);
+
+            const backgroundOptions = {
+                'white': { fgr: true, pha: true, background: 'rgb(255, 255, 255)' },
+                'green': { fgr: true, pha: true, background: 'rgb(120, 255, 155)' },
+                'alpha': { fgr: false, pha: true, background: 'rgb(0, 0, 0)' },
+                'foreground': { fgr: true, pha: false, background: 'rgb(245, 252, 235)' },
+                'image': { fgr: true, pha: true, background: 'url(images/image2.png) center center / cover' },
+                'image3': { fgr: true, pha: true, background: 'url(images/image3.png) center center / cover' },
+                'image4': { fgr: true, pha: true, background: 'url(images/image4.jpg) center center / cover' },
+                'image5': { fgr: true, pha: true, background: 'url(images/image5.avif) center center / cover' },
+                'image6': { fgr: true, pha: true, background: 'url(images/image6.jpg) center center / cover' },
+                'image8': { fgr: true, pha: true, background: 'url(images/image8.avif) center center / cover' },
+                'blur': { fgr: true, pha: false, background: null } // handled separately
+            };
+
+            while (true) {
+                await tf.nextFrame();
+                const img = await webcam.capture();
+                const src = tf.tidy(() => img.expandDims(0).div(255));
+                const [fgr, pha, r1o, r2o, r3o, r4o] = await model.executeAsync(
+                    { src, r1i, r2i, r3i, r4i, downsample_ratio },
+                    ['fgr', 'pha', 'r1o', 'r2o', 'r3o', 'r4o']
+                );
+
+                const viewOption = select.value;
+                valueChanged = viewOption !== previousValue;
+                previousValue = viewOption;
+
+                if (valueChanged && viewOption.includes('image')) {
                         drawHidden(r4o, canvas);
-                    }
-                    
-                    if (backgroundOptions[viewOption]) {
-                        const option = backgroundOptions[viewOption];
-                        const fgrTensor = option.fgr ? fgr.clone() : null;
-                        const phaTensor = option.pha ? pha.clone() : null;
-                        drawMatte(fgrTensor, phaTensor, canvas);
-                        if (option.background) {
-                            canvas.style.background = option.background;
-                        }
-                    }
-                    tf.dispose([img, src, fgr, pha, r1i, r2i, r3i, r4i]);
-                    [r1i, r2i, r3i, r4i] = [r1o, r2o, r3o, r4o];
                 }
-            }
 
-            async function drawMatte(fgr, pha, canvas){
-                const rgba = tf.tidy(() => {
-                    const rgb = (fgr !== null) ?
-                        fgr.squeeze(0).mul(255).cast('int32') :
-                        tf.fill([pha.shape[1], pha.shape[2], 3], 255, 'int32');
-                    const a = (pha !== null) ?
-                        pha.squeeze(0).mul(255).cast('int32') :
-                        tf.fill([fgr.shape[1], fgr.shape[2], 1], 255, 'int32');
-                    return tf.concat([rgb, a], -1);
-                });
-                fgr && fgr.dispose();
-                pha && pha.dispose();
-                const [height, width] = rgba.shape.slice(0, 2);
-                const pixelData = new Uint8ClampedArray(await rgba.data());
-                const imageData = new ImageData(pixelData, width, height);
-                canvas.width = width;
-                canvas.height = height;
-                canvas.getContext('2d').putImageData(imageData, 0, 0);
-                rgba.dispose();
-            }
+                if (viewOption === 'blur') {
+                    drawMatte(fgr, pha, canvas);
+                    const baseImage = await drawImage(img, canvas);
+                    canvas.style.background = `url(${baseImage})`;
+                } else if (backgroundOptions[viewOption]) {
+                    const option = backgroundOptions[viewOption];
+                    const fgrTensor = option.fgr ? fgr.clone() : null;
+                    const phaTensor = option.pha ? pha.clone() : null;
+                    drawMatte(fgrTensor, phaTensor, canvas);
+                    if (option.background) {
+                        canvas.style.background = option.background;
+                    }
+                }
 
-            async function drawHidden(r, canvas) {
-                const rgba = tf.tidy(() => {
-                    r = r.unstack(-1)
-                    r = tf.concat(r, 1)
-                    r = r.split(4, 1)
-                    r = tf.concat(r, 2)
-                    r = r.squeeze(0)
-                    r = r.expandDims(-1)
-                    r = r.add(1).mul(127.5).cast('int32')
-                    r = r.tile([1, 1, 3])
-                    r = tf.concat([r, tf.fill([r.shape[0], r.shape[1], 1], 255, 'int32')], -1)
-                    return r;
-                });
-                const [height, width] = rgba.shape.slice(0, 2);
-                const pixelData = new Uint8ClampedArray(await rgba.data());
-                const imageData = new ImageData(pixelData, width, height);
-                canvas.width = width;
-                canvas.height = height;
-                canvas.getContext('2d').putImageData(imageData, 0, 0);
-                rgba.dispose();
+                tf.dispose([img, src, fgr, pha, r1i, r2i, r3i, r4i]);
+                [r1i, r2i, r3i, r4i] = [r1o, r2o, r3o, r4o];
             }
+        }
 
-            window.addEventListener('load', main);
-        </script>
-    </head>
-    <body>
-        <select>
-            <option value="image">Image Background (image2.png)</option>
-            <option value="image3">Image Background (image3.png)</option>
-            <option value="image4">Image Background (image4.jpg)</option>
-            <option value="image5">Image Background (image5.avif)</option>
-            <option value="image6">Image Background (image6.jpg)</option>
-            <option value="image8">Image Background (image8.avif)</option>
-            <option value="white">White Background</option>
-            <option value="green">Green Background</option>
-            <option value="alpha">Alpha</option>
-            <option value="foreground">Foreground</option>
-        </select>
-        <br>
-        <video></video>
-        <canvas></canvas>
-    </body>
+        async function drawImage(img, canvas) {
+            const imgcanvas = document.getElementById('imgcanvas');
+                // Make sure tensor is in uint8 format and shape [height, width, 3]
+            const [height, width, channels] = img.shape;
+            let imgTensor = img;
+            if (img.dtype !== 'int32' && img.dtype !== 'uint8') {
+                imgTensor = img.mul(255).cast('int32');
+            }
+            const data = new Uint8ClampedArray(await imgTensor.data());
+            let rgbaData = new Uint8ClampedArray(width * height * 4);
+            for (let i = 0, j = 0; i < data.length; i += 3, j += 4) {
+                rgbaData[j] = data[i];     // R
+                rgbaData[j + 1] = data[i + 1]; // G
+                rgbaData[j + 2] = data[i + 2]; // B
+                rgbaData[j + 3] = 255;     // A
+            }
+            const imageData = new ImageData(rgbaData, width, height);
+            imgcanvas.width = width;
+            imgcanvas.height = height;
+            imgcanvas.getContext('2d').putImageData(imageData, 0, 0);
+            const ctx = imgcanvas.getContext('2d');
+            ctx.filter = 'blur(10px)';
+            ctx.drawImage(imgcanvas, 0, 0);
+            ctx.filter = 'none';
+            return imgcanvas.toDataURL();
+        }
+
+        async function drawMatte(fgr, pha, canvas) {
+            const rgba = tf.tidy(() => {
+                const rgb = (fgr !== null) ?
+                    fgr.squeeze(0).mul(255).cast('int32') :
+                    tf.fill([pha.shape[1], pha.shape[2], 3], 255, 'int32');
+                const a = (pha !== null) ?
+                    pha.squeeze(0).mul(255).cast('int32') :
+                    tf.fill([fgr.shape[1], fgr.shape[2], 1], 255, 'int32');
+                return tf.concat([rgb, a], -1);
+            });
+            fgr && fgr.dispose();
+            pha && pha.dispose();
+            const [height, width] = rgba.shape.slice(0, 2);
+            const pixelData = new Uint8ClampedArray(await rgba.data());
+            const imageData = new ImageData(pixelData, width, height);
+            canvas.width = width;
+            canvas.height = height;
+            canvas.getContext('2d').putImageData(imageData, 0, 0);
+            rgba.dispose();
+        }
+
+        async function drawHidden(r, canvas) {
+            const rgba = tf.tidy(() => {
+                r = r.unstack(-1)
+                r = tf.concat(r, 1)
+                r = r.split(4, 1)
+                r = tf.concat(r, 2)
+                r = r.squeeze(0)
+                r = r.expandDims(-1)
+                r = r.add(1).mul(127.5).cast('int32')
+                r = r.tile([1, 1, 3])
+                r = tf.concat([r, tf.fill([r.shape[0], r.shape[1], 1], 255, 'int32')], -1)
+                return r;
+            });
+            const [height, width] = rgba.shape.slice(0, 2);
+            const pixelData = new Uint8ClampedArray(await rgba.data());
+            const imageData = new ImageData(pixelData, width, height);
+            canvas.width = width;
+            canvas.height = height;
+            canvas.getContext('2d').putImageData(imageData, 0, 0);
+            rgba.dispose();
+        }
+
+        window.addEventListener('load', main);
+    </script>
+</head>
+
+<body>
+    <select>
+        <option value="image">Image Background (image2.png)</option>
+        <option value="image3">Image Background (image3.png)</option>
+        <option value="image4">Image Background (image4.jpg)</option>
+        <option value="image5">Image Background (image5.avif)</option>
+        <option value="image6">Image Background (image6.jpg)</option>
+        <option value="image8">Image Background (image8.avif)</option>
+        <option value="white">White Background</option>
+        <option value="green">Green Background</option>
+        <option value="alpha">Alpha</option>
+        <option value="foreground">Foreground</option>
+        <option value="blur">Blur Background</option>
+    </select>
+    <br>
+    <video autoplay muted playsinline></video>
+    <canvas></canvas>
+    <canvas id="imgcanvas" style="display: none;"></canvas>
+</body>
+
 </html>
