fixing demo url

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
         <div class="footer">
             <p>Powered by TensorFlow.js and Robust Video Matting AI</p>
-            <p>Developed by <a href="https://github.com/rajatshrivastava" target="_blank" style="color: #667eea; text-decoration: none; font-weight: 600;">Rajat Shrivastava</a></p>
+            <p>Developed by <a href="https://github.com/rajat-0206" target="_blank" style="color: #667eea; text-decoration: none; font-weight: 600;">Rajat Shrivastava</a></p>
         </div>
     </div>
 </body>
